<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"   
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"   
    android:orientation="vertical"
    >

<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/mmfooter_bg">

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="43dp"
            android:layout_height="43dp"
            android:background="@drawable/img_1" />
        
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/title_activity_push_orders"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </RelativeLayout>
<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:ems="10"
    android:layout_gravity="right"
    android:hint="@string/push_theme"
    android:inputType="number" />

<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:ems="10"
    android:layout_gravity="right"
    android:hint="@string/push_content"
    android:inputType="number" />

<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:ems="10"
    android:layout_gravity="right"
    android:hint="@string/push_money"
    android:inputType="number" />

<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:ems="10"
    android:layout_gravity="right"
    android:hint="@string/push_place"
    android:inputType="number" />

<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:ems="10"
    android:layout_gravity="right"
    android:hint="@string/push_time"
    android:inputType="number" />

<Button
    android:id="@+id/add"
    android:layout_width="94dp"
    android:layout_height="wrap_content"
    android:layout_gravity="right"
    android:layout_margin="10dp"
    android:text="@string/title_push" />

</LinearLayout>
