<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#eee"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <ImageView
            android:layout_width="80dip"
            android:layout_height="80dip"
            android:src="@drawable/img_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:text="@string/name"
            android:textColor="#000000"
            android:textSize="35sp" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:gravity="center"
        android:text="@string/author"
        android:textColor="#000"
        android:textSize="30sp" />

    <Button
        android:id="@+id/main_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:background="@drawable/btn_style_green"
        android:gravity="center"
        android:onClick="welcome_login"
        android:paddingLeft="130dip"
        android:paddingRight="130dip"
        android:text="@string/title_activity_login"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <Button
        android:id="@+id/main_regist_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="@drawable/btn_style_white"
        android:gravity="center"
        android:onClick="welcome_register"
        android:paddingLeft="130dip"
        android:paddingRight="130dip"
        android:text="@string/title_activity_regist"
        android:textColor="#000000"
        android:textSize="18sp" />

</LinearLayout>