<?xml version="1.0" encoding="utf-8"?>
<com.example.orders.widgets.MyRadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/my_radio_bar"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:dz="http://schemas.android.com/apk/res/com.example.orders"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/mmfooter_bg"
    android:scrollbars="none"
    dz:rightPadding="8dp" 
    android:orientation="horizontal">
    
    <RadioButton 
	          android:id="@+id/tab_icon_push_orders"
	          android:checked="true"
	          android:textColor="@color/tab_text"    
	          android:drawableTop="@drawable/tab_weixin"
	          android:text="@string/push_orders_text"
	          style="@style/tab_button_bg"
	            />
	        
	         <RadioButton 
	           android:id="@+id/tab_icon_get_orders"   
	          android:textColor="@color/tab_text"    
	          android:drawableTop="@drawable/tab_address"
	          android:text="@string/get_orders_text"
	          style="@style/tab_button_bg"
	            />
	         
	         
	          <RadioButton 
	          android:id="@+id/tab_icon_read_orders"   
	          android:textColor="@color/tab_text"    
	          android:drawableTop="@drawable/tab_frd"    
	          android:text="@string/read_orders_text"
	          style="@style/tab_button_bg"
	            />
	          
    
</com.example.orders.widgets.MyRadioGroup>
