<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f0f0e0" >

    <RelativeLayout
        android:id="@+id/rl_bottom_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/mmfooter_bg"
        android:padding="10dp" >

        <ImageButton
            android:id="@+id/chat_imageButton1"
            android:layout_width="43dp"
            android:layout_height="43dp"
            android:background="@drawable/img_1" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/chat_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_bottom_down"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/layout_bg1" >

        <TableRow
            android:id="@+id/tableRow_send"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:gravity="center" >

            <Button
                android:id="@+id/btn_send"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:text="@string/chat_send" />

            <Button
                android:id="@+id/funtionButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/chat_set" />
        </TableRow>

        <EditText
            android:id="@+id/et_sendmessage"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@id/tableRow_send"
            android:background="@drawable/edittext1"
            android:singleLine="true"
            android:textSize="18sp" />
    </RelativeLayout>

    <ListView
        android:id="@+id/chat_listview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/rl_bottom_down"
        android:layout_below="@id/rl_bottom_up"
        android:layout_marginLeft="1.0dip"
        android:layout_marginRight="1.0dip"
        android:cacheColorHint="#00000000"
        android:divider="@null"
        android:dividerHeight="1dp"
        android:scrollbars="none" />

    <TableRow
        android:id="@+id/tableRow_function_button"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_above="@+id/rl_bottom_down"
        android:layout_alignParentRight="true"
        android:background="@color/grey"
        android:gravity="center" >

        <Button
            android:id="@+id/function_oeder_process"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:text="@string/chat_order_process" />

        <Button
            android:id="@+id/function_order_add"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:text="@string/chat_add" />
    </TableRow>

</RelativeLayout>