<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/mmfooter_bg"
        android:padding="10dp" >

        <ImageButton
            android:id="@+id/my_person_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/showright_selector"
            android:onClick="showLeftMenu" />

        <ImageButton
            android:id="@+id/setting_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/showleft_selector"
            android:onClick="showRightMenu" />

        <TextView
            android:id="@+id/head_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/title_activity_push_orders"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white" />

        <ImageButton
            android:id="@+id/addOrders"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/head_text"
            android:layout_marginRight="41dp"
            android:background="@drawable/add"
            android:onClick="openAddOrderForm" />

    </RelativeLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/id_viewpager"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </android.support.v4.view.ViewPager>

    <RadioGroup
        android:id="@+id/tab_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/mmfooter_bg"
        android:orientation="horizontal"
        android:scrollbars="none" >

        <RadioButton
            android:id="@+id/tab_icon_push_orders"
            style="@style/tab_button_bg"
            android:onClick="showFirstFragment"
            android:checked="true"
            android:drawableTop="@drawable/tab_weixin"
            android:text="@string/push_orders_text"
            android:textColor="@color/tab_text" />

        <RadioButton
            android:id="@+id/tab_icon_get_orders"
            style="@style/tab_button_bg"
            android:onClick="showSecondFragment"
            android:drawableTop="@drawable/tab_address"
            android:text="@string/get_orders_text"
            android:textColor="@color/tab_text" />

        <RadioButton
            android:id="@+id/tab_icon_read_orders"
            style="@style/tab_button_bg"
            android:onClick="showLastFragment"
            android:drawableTop="@drawable/tab_frd"
            android:text="@string/read_orders_text"
            android:textColor="@color/tab_text" />
    </RadioGroup>

</LinearLayout>