<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/mmfooter_bg"
        android:padding="10dp" >

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="43dp"
            android:layout_height="43dp"
            android:background="@drawable/img_1" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/setting_perfect_information"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white" />
    </RelativeLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TableRow
            android:layout_height="wrap_content"
            android:gravity="center" >
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:gravity="center" >
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:gravity="center" >
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_shenfenzheng_id" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="18" />
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:gravity="center" >
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:gravity="center" >

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
            </RadioGroup>
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:gravity="center" >
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:gravity="center" >
        </TableRow>

        <TableRow
            android:layout_height="wrap_content"
            android:gravity="center" >
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_regist" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abrogate" />
    </LinearLayout>

</LinearLayout>